Refactor theme converter to use Pico CSS, Fix spaghetti

--- a/theme-converter/theme-converter.css
+++ b/theme-converter/theme-converter.css
@@ -1,39 +1,3 @@
-#main-card {
-    border-width: 4px;
-}
-
-#loader {
-    width: 48px;
-    height: 48px;
-    position: relative;
-}
-
-#loader::after,
-#loader::before {
-    content: '';
-    box-sizing: border-box;
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    border: 2px solid #FFF;
-    position: absolute;
-    left: 0;
-    top: 0;
-    animation: animloader 2s linear infinite;
-}
-
-#loader::after {
-    animation-delay: 1s;
-}
-
-@keyframes animloader {
-    0% {
-        transform: scale(0);
-        opacity: 1;
-    }
-
-    100% {
-        transform: scale(1);
-        opacity: 0;
-    }
-}
+@import 'styles/theme-switch.css';
+@import 'styles/glitch.css';
+@import 'styles/custom.css';
